--- a/content/psionics.html
+++ b/content/psionics.html
@@ -46,8 +46,7 @@
                             <a class="dropdown-item" href="races.html">Races</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="feats.html">Feats</a>
-                            <a class="dropdown-item" href="infusions.html"
-                                style="pointer-events: none; color: gray">Infusions</a>
+                            <a class="dropdown-item" href="infusions.html">Infusions</a>
                             <a class="dropdown-item" href="training.html">Training</a>
                         </div>
                     </li>
@@ -3736,30 +3735,31 @@
                             <li>You can enhance your telepathy with the following benefits:
                                 <br><br>
                                 <table class="table table-striped table-bordered p-1">
-                                    <th class="text-center">Cost</th>
+
                                     <th class="text-center">Effect</th>
+                                    <th class="text-center">Cost</th>
                                     <tr>
-                                        <td class="text-center">1+</td>
                                         <td class="text-center">Increase number of targets by your proficiency bonus.
                                         </td>
+                                        <td class="text-center">1+</td>
                                     </tr>
                                     <tr>
-                                        <td class="text-center">1+</td>
                                         <td class="text-center">Include a visual and/or auditory aspect up to a minute
                                             in duration.</td>
+                                        <td class="text-center">1+</td>
                                     </tr>
                                     <tr>
-                                        <td class="text-center">3</td>
                                         <td class="text-center">Attempt to contact a target you do not know. You must
                                             have seen
                                             their face, been given a telepathic visual, or know their name.*</td>
+                                        <td class="text-center">3</td>
                                     </tr>
                                     <tr>
-                                        <td class="text-center">2</td>
                                         <td class="text-center">Receive a telepathic response. This response is limited
                                             to
                                             information that would normally take 1 minute or less to share
                                             verbally.</td>
+                                        <td class="text-center">2</td>
                                     </tr>
                                 </table>
                                 If you are attempting to contact a creature with which you are
