--- a/content/classes.html
+++ b/content/classes.html
@@ -44,7 +44,7 @@
               <a class="dropdown-item" href="races.html">Races</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="feats.html">Feats</a>
-              <a class="dropdown-item" href="infusions.html" style="pointer-events: none; color: gray">Infusions</a>
+              <a class="dropdown-item" href="infusions.html">Infusions</a>
               <a class="dropdown-item" href="training.html">Training</a>
             </div>
           </li>
