--- a/home.html
+++ b/home.html
@@ -45,8 +45,7 @@
                             <a class="dropdown-item" href="content/races.html">Races</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="content/feats.html">Feats</a>
-                            <a class="dropdown-item" href="content/infusions.html"
-                                style="pointer-events: none; color: gray">Infusions</a>
+                            <a class="dropdown-item" href="content/infusions.html">Infusions</a>
                             <a class="dropdown-item" href="content/training.html">Training</a>
                         </div>
                     </li>
