Responsive view for infusions + Fusists rules

--- a/content/rules.html
+++ b/content/rules.html
@@ -99,12 +99,6 @@
         <ol type="I" class="flex-column">
           <li class="nav-item">
             <a class="nav-link active" href="#section1">Dreadful Options in Pergasha</a>
-            <!-- <ol type="a">
-
-                  <li>
-                    <a class="nav-link" href="#XXX">XXX</a>
-                  </li>
-                </ol> -->
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#section2">Gaining Levels and Abilities</a>
@@ -142,6 +136,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#section13">Psionics</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#section14">Fusists</a>
+          </li>
         </ol>
       </nav>
       <div class="col-sm-10" id="rulesDisplay">
@@ -165,6 +162,7 @@
             <a class="dropdown-item" href="#section11">Skills</a>
             <a class="dropdown-item" href="#section12">Feats</a>
             <a class="dropdown-item" href="#section13">Psionics</a>
+            <a class="dropdown-item" href="#section14">Fusists</a>
           </div>
         </div>
 
@@ -2500,6 +2498,157 @@
             individual
             unconscious.</p>
 
+        </div>
+        <div class="p-2" id="section14">
+          <h1 class="arjulian section-title">Fusists</h1>
+          <p>With the recent influx of a once-depleted substance known as mana, the people of Pergasha have developed
+            new technologies and abilities. Mana opens the body’s ability to tap into the power of the spirits of
+            elemental motes, infusing their bodies with mana and a particular type of mote. Fusists, as they are called,
+            sacrifice their own endurance to manipulate the elements through this bond, and while these abilities are
+            nowhere near as powerful as the magic and technology of the Titans, it is the first scraps of such to a
+            starving land.</p>
+          <h3 class="arjulian">Being a Fusist</h3>
+          <p>When you decide to become a fusist, you tap 1 Hit Die and select one of the
+            specialties. You gain passive bonuses, abilities, or benefits once you are
+            dedicated to that mote type. The tapped Hit Die cannot be recovered through
+            rest, nor can it be used for healing or abilities requiring expending Hit Die. This
+            tapped Hit Die is considered permanently expended.</p>
+          <p>Fusists utilize mana and expend Hit Die to use abilities. Some abilities will cease to
+            function if you deplete these resources. However, you will always enjoy the
+            passive benefits from your infusion selection. You also cannot use infusions if you
+            are incapacitated. Importantly, if you decide to become a fusist, you cannot
+            become a Psion (but psionics are still available to you).</p>
+          <h3 class="arjulian">Mana</h3>
+          <p>Mana is an unusual powdery substance that is toxic to those lacking the strength
+            of body or another mode of compatibility to utilize it. Its exact composition is
+            unknown, but it comes in many colors that seem to have slightly different
+            effects. It is often inhaled or injected into the body, and it is required to utilize
+            infusion abilities.</p>
+          <p>Experiments have been conducted and while there is still much left to
+            understand about mana, it is clear that an individual can only tolerate so much
+            before irreparable damage is done to the body.</p>
+          <p>A true fusist utilizes a Syphon, a mysterium that collects, houses, and safely injects
+            the substance into the body. Mana can be collected manually with great care,
+            but its unstable nature makes it a dangerous undertaking.</p>
+          <p>When you first begin as a Fusist, your body can withstand 3 doses of mana
+            before requiring a long rest. As you improve your abilities and adapt to your
+            Syphon, you can tolerate higher doses.</p>
+          <h3 class="arjulian">Advancing as a Fusist</h3>
+          <p>Infusion abilities build upon the foundation of control over one’s own lifeforce,
+            tolerance to mana, and the bond with motes. Motes can be manipulated in a
+            variety of ways, allowing a Fusist to customize their repertoire of abilities. This
+            customization is represented in a tree with nodes marking abilities acquired. You
+            always start at the beginning of a tree, and you can only select a node that is
+            connected to one of your activated nodes. Some abilities have multiple nodes,
+            but you are not required to invest in all tiers of an ability to progress through a
+            tree. Benefits to investing in higher tiers include stronger versions of abilities, and
+            some abilities later in a tree may refer to tiers.</p>
+          <p>There are multiple ways to advance as a Fusist:
+          <ul>
+            <li>When you level up, you may advance one node.</li>
+            <li>Channeling at a mana node or similar place of power over a full rest. You must spend 1 TP to advance 1
+              node.</li>
+            <li>Acquiring secrets, lost knowledge, or being taught an advanced technique by another Fusist. There may be
+              an additional cost depending on the technique.</li>
+          </ul>
+          </p>
+          <p>Some Fusists are so dedicated that they gain mastery over multiple mote types. A Fusist can gain access to
+            another infusion tree by acquiring the <a href="feats.html#fusist">Fusist</a> feat.</p>
+          <h3 class="arjulian">Infusion Attacks</h3>
+          <p>The key ability score for a Fusist is <b>Constitution</b>. When an ability calls for an
+            infusion melee or ranged attack, you add your Constitution modifier to the roll
+            and damage (unless otherwise specified). You are considered proficient with
+            infused attacks.</p>
+          <p>Critical hits do not affect the damage on infusion attacks, but some abilities list
+            effects that occur on critical hits.</p>
+          <h3 class="arjulian">Using Infusion Abilities</h3>
+          <p>Infusion abilities are displayed in a similar fashion as psionics with a few
+            differences.
+          <ul style="list-style-type:none;">
+            <li><b>Activation. </b>This is the action economy required to use the ability.</li>
+            <li><b>Cost. </b>Some infusion abilities require Hit Die or mana to be expended. Some
+              require a minimum amount of mana to be held without expending the material.
+              Refer to the list below for more information.
+              <ul>
+                <li><b>HD (x):</b> The value in parenthesis is the number of Hit Die that must be
+                  expended to use the ability. You cannot go below 0 Hit Die.</li>
+                <li><b>M (x):</b> The value in the parenthesis is the amount of mana that must be
+                  expended to use the ability. You cannot spend more mana than you
+                  have available.</li>
+                <li><b>P (x):</b> The value in the parenthesis is the amount of mana that must be
+                  available to use the ability. The ability does not initially expend the mana
+                  but instead requires a pool to function. An ability may require a reserve
+                  and later expend mana to activate a secondary aspect.</li>
+              </ul>
+            </li>
+            <li><b>Duration: </b>Some abilities are instantaneous and function immediately. Others
+              have longer durations requiring concentration. To hold concentration on an
+              infusion ability, you must always have at least 1 mana in your pool. If you drop
+              below 1 mana, the ability immediately ends.</li>
+            <li><b>Empower. </b>Some infusions may have extended capabilities. You must be able to
+              pay the cost to empower, and these costs are always in addition to the base
+              cost. If a power allows you to empower it after triggering, doing so does not
+              restart the timer on its duration.</li>
+            <li><b>Range: </b>The nature of infusion abilities requires a line of site to the target location
+              or creature unless otherwise specified. Seeing the aura of a creature is not
+              enough to have line of sight for infusion abilities.</li>
+            <li><b>Synergy. </b>The chaotic nature of motes sometimes allows for interesting synergies
+              between different infusions. If an ability allows for synergies, they will be
+              described in these sections.</li>
+            <li><b>Trigger. </b>This lists requirements to trigger the ability. Some abilities require a
+              spoken element (verbal) or movement of the hands or body (somatic). If you
+              are under an effect that restricts your ability to speak or move, you cannot
+              trigger an ability requiring that element.</li>
+          </ul>
+          </p>
+          <h3 class="arjulian">Infusion Saving Throws</h3>
+          <p>Some infusion abilities call for your targets to make a saving throw. The DC for
+            your infusion abilities is as follows:</p>
+          <p class="text-center" style="color:red"><b>DC = 8 + your Constitution modifier + your proficiency bonus</b>
+          </p>
+          <h3 class="arjulian">Infusions</h3>
+          <p>There are many more motes and infusions in the world, but the following options
+            are currently available:
+          <ul>
+            <li><b>Aerofusion. </b>Aerofusion allows control over air and,
+              by extension, wind. Air motes are
+              constantly moving and while the
+              untrained eye may see them as agents
+              of chaos, they are quite the opposite.
+              They are a conundrum: logical yet
+              flighty; predictably dynamic; heavy
+              and light. This affinity lends grace and
+              speed to fusists while also an ability to
+              pull back from a heated moment and
+              analyze a situation dispassionately.</li>
+            <li><b>Bloodfusion. </b>Bloodfusion grants power over blood,
+              the liquid lifeforce of all creatures.
+              Blood motes are passionate and
+              perky, giving a first impression of
+              lightheartedness and gaiety. However,
+              once enraged, these motes do not
+              hesitate to drink greedily and kill. This
+              affinity bestows these traits to the
+              bearer in addition to an increased
+              appetite.</li>
+            <li><b>Hydrofusion. </b>Hydrofusion is the ability to
+              manipulate the elemental motes
+              that make water. This affinity for
+              water often marks the bearer with
+              a fluidity of movement, a friendlier
+              demeanor, or a graceful smile that
+              provides comfort to those around
+              them.</li>
+            <li><b>Pyrofusion. </b>Pyrofusion grants control over
+              flame. Fire motes are erratic,
+              quick to anger, and dangerous
+              when infuriated. This affinity gifts
+              a fusist with a piercing stare, a
+              high body temperature, and an
+              eagerness for fight whether it
+              one of wits or to the death.</li>
+          </ul>
+          </p>
         </div>
       </div>
     </div>
