New rules, typos + sizing adjustment on infusions

--- a/content/psionics.html
+++ b/content/psionics.html
@@ -4008,7 +4008,7 @@
                                 energy against a group of enemies. When you burn this talent, all creatures that you
                                 can see within 10 feet of you must make an Intelligence saving throw. Each creature
                                 that fails its save take the usual damage from this talent and none may make an
-                                attack of opportgunity against you until the end of your turn. On a success, the
+                                attack of opportunity against you until the end of your turn. On a success, the
                                 creatures take half damage and suffer no other effects.</li>
                         </ul>
                     </div>
