--- a/content/races.html
+++ b/content/races.html
@@ -1772,7 +1772,7 @@
                                     energy of the Sundering Storms, mana, or other oddities of
                                     Pergasha. These changes often carry a stigma among
                                     Lizardfolk as a mark of weakness or impurity (hence the
-                                    derrogatory term twisted). This stigma is similar to how
+                                    derogatory term twisted). This stigma is similar to how
                                     some Pergashans view Touched Kin or their own twisted
                                     people. Some Lizardfolk sprout extra limbs, acquire
                                     enhanced mental powers, or gain a primal connection to
@@ -1997,7 +1997,7 @@
                             until the end of your next turn. The DC for this check is 8 + your
                             choice of your Dexterity or Strength modifier + your proficiency
                             bonus. If you are underwater, add your level to the piercing
-                            damage of your bite. Once you use this feature, you can’t useit again until you finish a
+                            damage of your bite. Once you use this feature, you can’t use it again until you finish a
                             long rest. <i>(Minimum level: 15. Requires
                                 Greater Amphibian.)</i>
                         </td>
