--- a/content/rules.html
+++ b/content/rules.html
@@ -571,7 +571,7 @@
                 <td class="text-center">Medium</td>
                 <td class="text-center">2</td>
                 <td>Speed decreased by 10ft. Max Dexterity bonus to AC = +3. Disadvantage on Ability checks using
-                  Strength, Dexterity and Connstitution</td>
+                  Strength, Dexterity and Constitution</td>
               </tr>
               <tr>
                 <td class="text-center">Heavy</td>
@@ -701,6 +701,26 @@
         </div>
         <div class="p-2" id="section6">
           <h1 class="arjulian section-title">Combat</h1>
+          <h3 class="arjulian">Flying & Falling</h3>
+          <h5 class="arjulian">Falling</h5>
+          <p>When you fall more than 5 feet, you take bludgeoning damage equal to half the distance you fell when you
+            land. Treat
+            falls longer than 1,500 feet as though they were 1,500 feet (750 damage). If you take any damage from a
+            fall, you land
+            prone. You fall about 500 feet in the first round of falling and about 1,500 feet each round thereafter.</p>
+          <h5 class="arjulian">Flying</h5>
+          <p>Flying creatures enjoy many benefits of mobility, but they must also deal with the danger of falling. If a
+            flying
+            creature is knocked prone, has its speed reduced to 0, or is otherwise deprived of the ability to move, the
+            creature
+            falls, unless it has the ability to hover or it is being held aloft by some other ability, such as psionic
+            levitation.</p>
+          <p><b>Falling Prone:</b> If you are affected by an ability that knocks a creature prone while you are flying
+            and are conscious,
+            you fall a minimum of 60 feet or up to half the distance of your elevation. Creatures with hover that are
+            knocked prone
+            while flying fall a maximum of 60 feet. If a flying creature takes falling damage by hitting the ground, it
+            falls prone.</p>
           <h3 class="arjulian">Expanded Conditions</h3>
           <h5 class="arjulian">Grappled</h5>
           <ul>
@@ -733,7 +753,7 @@
           <p>While a creature is grappled by you, you may use half your movement to make an opposed grapple check
             against that creature in order to position it in such a way that it shields you from one or more hostile
             creatures that you are aware of. If the creature is of your size it provides half cover (+2 AC) or if the
-            creature is one size larger than yourself, threequarters cover (+5 AC). </p>
+            creature is one size larger than yourself, three-quarters cover (+5 AC). </p>
           <p> If the grappled creature is stunned, paralyzed or unconscious, the DC for the Strength (Athletics) check
             is 12.</p>
           <h5 class="arjulian">Charge</h5>
@@ -888,7 +908,7 @@
               </tr>
               <tr>
                 <td class="text-center">4</td>
-                <td>You can only take an actioon or a bonus action during your turn, and you cannot take reactions.
+                <td>You can only take an action or a bonus action during your turn, and you cannot take reactions.
                   You can concentrate on one thing only, such as a psionic ability or enemy target, and ignore all
                   else. Your are limited to simple mental tasks.</td>
               </tr>
@@ -2330,16 +2350,23 @@
           <p> You choose your psychic focus when you finish a long rest and may shift it later as an action. You can
             only shift your focus once per short rest, to a maximum of three shifts each day.</p>
           <h3 class="arjulian">Psionic Mastery</h3>
-          <p>At 11th level, your mastery over your psionic energy allows you to push your mind beyond its normal
-            limits. Choose a discipline you know. All the benefits of its psychic focus are permanent to you and don’t
-            count against your psychic focus limit. This enables you to choose another discipline you know to have as
-            your psychic focus and still gain its benefits. </p>
+          <p>At 11th level, your mastery over your psionic energy allows you to push your mind beyond its normal limits.
+            Choose a
+            discipline you know. All the benefits of its psychic focus are permanent to you and do not count against
+            your psychic
+            focus limit. This enables you to choose another discipline you know to have as your psychic focus and still
+            gain its
+            benefits.</p>
           <p>You also gain that discipline’s Mastery effects, described in each discipline. You must be able to afford
-            the Psi Point cost if there is one. As normal, a Mastery focus still ends when you are <i>incapacitated,
-              frightened, charmed</i> or<i> stunned</i>. </p>
+            the Psi Point
+            cost if there is one. However, if you haven’t spent Psi Points in a turn, you can bypass your Psi Limit to
+            use a Mastery
+            Power. As normal, a Mastery focus still ends when you are <i>incapacitated</i>, <i>frightened</i>,
+            <i>charmed</i> or <i>stunned</i>.
+          </p>
           <p> You gain a second Mastery when you reach the 20th level. When you reach 17th level, you gain the Mastery
-            Improvement feature which removes the Concentration tag on any effects of your Mastery discipline, if
-            applicable.</p>
+            Improvement
+            feature which removes the Concentration tag on any effects of your Mastery discipline, if applicable.</p>
           <h3 class="arjulian">Psionic Disciplines and Talents</h3>
           <p>Psionic talents and disciplines are the heart of a mystic’s craft. They are the mental exercises and
             psionic formulae used to forge will into tangible effects. </p>
@@ -2351,7 +2378,7 @@
             such as <i>charmed, frightened, incapacitated, poisoned</i> or<i> stunned</i>. Being under mental stress,
             such as with a temporary madness, can also weirdly interact with your psionics, provoking strange effects,
             and for each Exhaustion level you have, your Talent’s Psi Points cost increases by 1. </p>
-          <p>See <a href="psionics.html">Psionics</a> for a detailled list of Disciplines and Talents.</p>
+          <p>See <a href="psionics.html">Psionics</a> for a detailed list of Disciplines and Talents.</p>
           <h4 class="arjulian">Using a Discipline</h4>
           <p>Each psionic discipline has several ways you can use it and all contained in its description. The
             discipline specifies the type of action and number of psi points it requires. It also details whether you
@@ -2669,7 +2696,7 @@
     crossorigin="anonymous"></script>
   <script src="../pergasha.js"></script>
   <script>
-    $('testrules').scrollspy({ target: '#navbar-example3' })
+    // $('testrules').scrollspy({ target: '#navbar-example3' })
   </script>
 </body>
 
